support build execute JAR for docker